--- a/series.conf
+++ b/series.conf
@@ -249,6 +249,7 @@
 	patches.kernel.org/6.17.3-177-selftest-futex-Compile-also-with-libnuma-2.0.1.patch
 	patches.kernel.org/6.17.3-178-bpf-dont-report-verifier-bug-for-missing-bpf_s.patch
 	patches.kernel.org/6.17.3-179-bpf-arm64-Call-bpf_jit_binary_pack_finalize-in.patch
+	patches.kernel.org/6.17.3-180-arm64-dts-apple-t600x-Add-missing-WiFi-propert.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
