--- a/series.conf
+++ b/series.conf
@@ -427,6 +427,7 @@
 	patches.kernel.org/6.17.3-355-wifi-mt76-mt7996-Use-proper-link_id-in-link_st.patch
 	patches.kernel.org/6.17.3-356-wifi-mt76-mt7996-Check-phy-before-init-msta_li.patch
 	patches.kernel.org/6.17.3-357-wifi-mt76-mt7996-Fix-tx-queues-initialization-.patch
+	patches.kernel.org/6.17.3-358-wifi-mt76-mt7996-Fix-RX-packets-configuration-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
