--- a/series.conf
+++ b/series.conf
@@ -472,6 +472,7 @@
 	patches.kernel.org/6.17.3-400-sparc-fix-accurate-exception-reporting-in-copy.patch
 	patches.kernel.org/6.17.3-401-sparc-fix-accurate-exception-reporting-in-copy.patch
 	patches.kernel.org/6.17.3-402-sparc-fix-accurate-exception-reporting-in-copy.patch
+	patches.kernel.org/6.17.3-403-sparc-fix-accurate-exception-reporting-in-copy.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
