--- a/series.conf
+++ b/series.conf
@@ -413,6 +413,7 @@
 	patches.kernel.org/6.17.3-341-mm-slub-Fix-cmp_loc_by_count-to-return-0-when-.patch
 	patches.kernel.org/6.17.3-342-tools-ynl-fix-undefined-variable-name.patch
 	patches.kernel.org/6.17.3-343-RDMA-mlx5-Fix-page-size-bitmap-calculation-for.patch
+	patches.kernel.org/6.17.3-344-netfilter-ipset-Remove-unused-htable_bits-in-m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
