--- a/series.conf
+++ b/series.conf
@@ -264,6 +264,7 @@
 	patches.kernel.org/6.17.3-192-clocksource-drivers-tegra186-Avoid-64-bit-divi.patch
 	patches.kernel.org/6.17.3-193-bpf-Mark-kfuncs-as-__noclone.patch
 	patches.kernel.org/6.17.3-194-once-fix-race-by-moving-DO_ONCE-to-separate-se.patch
+	patches.kernel.org/6.17.3-195-hwmon-mlxreg-fan-Separate-methods-of-fan-setti.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
