--- a/series.conf
+++ b/series.conf
@@ -133,6 +133,7 @@
 	patches.kernel.org/6.17.3-061-firmware-arm_scmi-Mark-VirtIO-ready-before-reg.patch
 	patches.kernel.org/6.17.3-062-arm64-dts-imx93-kontron-Fix-GPIO-for-panel-reg.patch
 	patches.kernel.org/6.17.3-063-arm64-dts-imx93-kontron-Fix-USB-port-assignmen.patch
+	patches.kernel.org/6.17.3-064-arm64-dts-imx95-Correct-the-lpuart7-and-lpuart.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
