--- a/series.conf
+++ b/series.conf
@@ -483,6 +483,7 @@
 	patches.kernel.org/6.17.3-411-RDMA-rxe-Fix-race-in-do_task-when-draining.patch
 	patches.kernel.org/6.17.3-412-selftests-mm-fix-va_high_addr_switch.sh-failur.patch
 	patches.kernel.org/6.17.3-413-wifi-rtw89-fix-leak-in-rtw89_core_send_nullfun.patch
+	patches.kernel.org/6.17.3-414-wifi-rtw89-avoid-circular-locking-dependency-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
