--- a/series.conf
+++ b/series.conf
@@ -536,6 +536,7 @@
 	patches.kernel.org/6.17.3-464-ocfs2-fix-double-free-in-user_cluster_connect.patch
 	patches.kernel.org/6.17.3-465-drivers-base-node-fix-double-free-in-register_.patch
 	patches.kernel.org/6.17.3-466-f2fs-fix-UAF-issue-in-f2fs_merge_page_bio.patch
+	patches.kernel.org/6.17.3-467-mtd-rawnand-atmel-Fix-error-handling-path-in-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
