--- a/series.conf
+++ b/series.conf
@@ -537,6 +537,7 @@
 	patches.kernel.org/6.17.3-465-drivers-base-node-fix-double-free-in-register_.patch
 	patches.kernel.org/6.17.3-466-f2fs-fix-UAF-issue-in-f2fs_merge_page_bio.patch
 	patches.kernel.org/6.17.3-467-mtd-rawnand-atmel-Fix-error-handling-path-in-a.patch
+	patches.kernel.org/6.17.3-468-PCI-j721e-Fix-incorrect-error-message-in-probe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
