--- a/series.conf
+++ b/series.conf
@@ -485,6 +485,7 @@
 	patches.kernel.org/6.17.3-413-wifi-rtw89-fix-leak-in-rtw89_core_send_nullfun.patch
 	patches.kernel.org/6.17.3-414-wifi-rtw89-avoid-circular-locking-dependency-i.patch
 	patches.kernel.org/6.17.3-415-PCI-tegra194-Fix-duplicate-PLL-disable-in-pex_.patch
+	patches.kernel.org/6.17.3-416-remoteproc-qcom-q6v5-Avoid-disabling-handover-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
