--- a/series.conf
+++ b/series.conf
@@ -192,6 +192,7 @@
 	patches.kernel.org/6.17.3-120-block-cleanup-bio_issue.patch
 	patches.kernel.org/6.17.3-121-block-initialize-bio-issue-time-in-blk_mq_subm.patch
 	patches.kernel.org/6.17.3-122-block-factor-out-a-helper-bio_submit_split_bio.patch
+	patches.kernel.org/6.17.3-123-block-skip-unnecessary-checks-for-split-bio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
