--- a/series.conf
+++ b/series.conf
@@ -425,6 +425,7 @@
 	patches.kernel.org/6.17.3-353-wifi-mt76-mt7996-Fix-mt7996_mcu_bss_mld_tlv-ro.patch
 	patches.kernel.org/6.17.3-354-wifi-mt76-fix-potential-memory-leak-in-mt76_wm.patch
 	patches.kernel.org/6.17.3-355-wifi-mt76-mt7996-Use-proper-link_id-in-link_st.patch
+	patches.kernel.org/6.17.3-356-wifi-mt76-mt7996-Check-phy-before-init-msta_li.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
