--- a/series.conf
+++ b/series.conf
@@ -85,6 +85,7 @@
 	patches.kernel.org/6.17.3-013-gfs2-Remove-space-before-newline.patch
 	patches.kernel.org/6.17.3-014-gfs2-Further-sanitize-lock_dlm.c.patch
 	patches.kernel.org/6.17.3-015-gfs2-Fix-LM_FLAG_TRY-logic-in-add_to_queue.patch
+	patches.kernel.org/6.17.3-016-gfs2-Remove-duplicate-check-in-do_xmote.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
