--- a/series.conf
+++ b/series.conf
@@ -479,6 +479,7 @@
 	patches.kernel.org/6.17.3-407-crypto-hisilicon-qm-set-NULL-to-qm-debug.qm_di.patch
 	patches.kernel.org/6.17.3-408-wifi-ath12k-Fix-peer-lookup-in-ath12k_dp_mon_r.patch
 	patches.kernel.org/6.17.3-409-rpmsg-qcom_smd-Fix-fallback-to-qcom-ipc-parse.patch
+	patches.kernel.org/6.17.3-410-remoteproc-qcom_q6v5_mss-support-loading-MBN-f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
