--- a/series.conf
+++ b/series.conf
@@ -543,6 +543,7 @@
 	patches.kernel.org/6.17.3-471-nfp-fix-RSS-hash-key-size-when-RSS-is-not-supp.patch
 	patches.kernel.org/6.17.3-472-net-ena-return-0-in-ena_get_rxfh_key_size-when.patch
 	patches.kernel.org/6.17.3-473-net-dlink-handle-copy_thresh-allocation-failur.patch
+	patches.kernel.org/6.17.3-474-net-mlx5-Stop-polling-for-command-response-if-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
