--- a/series.conf
+++ b/series.conf
@@ -81,6 +81,7 @@
 	patches.kernel.org/6.17.3-009-selftests-arm64-Fix-Waddress-warning-in-tpidr2.patch
 	patches.kernel.org/6.17.3-010-kselftest-arm64-gcs-Correctly-check-return-val.patch
 	patches.kernel.org/6.17.3-011-hfsplus-fix-slab-out-of-bounds-read-in-hfsplus.patch
+	patches.kernel.org/6.17.3-012-gfs2-Fix-GLF_INVALIDATE_IN_PROGRESS-flag-clear.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
