--- a/series.conf
+++ b/series.conf
@@ -71,6 +71,7 @@
 	patches.kernel.org/6.17.2-026-ring-buffer-Propagate-__rb_map_vma-return-valu.patch
 	patches.kernel.org/6.17.2-027-Linux-6.17.2.patch
 	patches.kernel.org/6.17.3-001-arch-copy_thread-pass-clone_flags-as-u64.patch
+	patches.kernel.org/6.17.3-002-filelock-add-FL_RECLAIM-to-show_fl_flags-macro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
