--- a/series.conf
+++ b/series.conf
@@ -113,6 +113,7 @@
 	patches.kernel.org/6.17.3-041-pinctrl-renesas-rzg2l-Fix-invalid-unsigned-ret.patch
 	patches.kernel.org/6.17.3-042-arm64-dts-renesas-rzg2lc-smarc-Disable-CAN-FD-.patch
 	patches.kernel.org/6.17.3-043-bpf-Tidy-verifier-bug-message.patch
+	patches.kernel.org/6.17.3-044-regmap-Remove-superfluous-check-for-config-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
