--- a/series.conf
+++ b/series.conf
@@ -246,6 +246,7 @@
 	patches.kernel.org/6.17.3-174-mmc-select-REGMAP_MMIO-with-MMC_LOONGSON2.patch
 	patches.kernel.org/6.17.3-175-selftests-futex-Fix-futex_wait-for-32bit-ARM.patch
 	patches.kernel.org/6.17.3-176-selftest-futex-Make-the-error-check-more-preci.patch
+	patches.kernel.org/6.17.3-177-selftest-futex-Compile-also-with-libnuma-2.0.1.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
