--- a/series.conf
+++ b/series.conf
@@ -444,6 +444,7 @@
 	patches.kernel.org/6.17.3-372-scsi-qla2xxx-edif-Fix-incorrect-sign-of-error-.patch
 	patches.kernel.org/6.17.3-373-scsi-qla2xxx-Fix-incorrect-sign-of-error-code-.patch
 	patches.kernel.org/6.17.3-374-scsi-qla2xxx-Fix-incorrect-sign-of-error-code-.patch
+	patches.kernel.org/6.17.3-375-HID-hidraw-tighten-ioctl-command-parsing.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
