--- a/series.conf
+++ b/series.conf
@@ -266,6 +266,7 @@
 	patches.kernel.org/6.17.3-194-once-fix-race-by-moving-DO_ONCE-to-separate-se.patch
 	patches.kernel.org/6.17.3-195-hwmon-mlxreg-fan-Separate-methods-of-fan-setti.patch
 	patches.kernel.org/6.17.3-196-tools-nolibc-add-stdbool.h-to-nolibc-includes.patch
+	patches.kernel.org/6.17.3-197-thermal-drivers-qcom-Make-LMH-select-QCOM_SCM.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
