--- a/series.conf
+++ b/series.conf
@@ -160,6 +160,7 @@
 	patches.kernel.org/6.17.3-088-genirq-test-Depend-on-SPARSE_IRQ.patch
 	patches.kernel.org/6.17.3-089-genirq-test-Drop-CONFIG_GENERIC_IRQ_MIGRATION-.patch
 	patches.kernel.org/6.17.3-090-genirq-test-Ensure-CPU-1-is-online-for-hotplug.patch
+	patches.kernel.org/6.17.3-091-selftests-bpf-Fix-count-write-in-testapp_xdp_m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
