--- a/series.conf
+++ b/series.conf
@@ -368,6 +368,7 @@
 	patches.kernel.org/6.17.3-296-inet-ping-check-sock_net-in-ping_get_port-and-.patch
 	patches.kernel.org/6.17.3-297-dmaengine-Fix-dma_async_tx_descriptor-tx_submi.patch
 	patches.kernel.org/6.17.3-298-coresight-trbe-Add-ISB-after-TRBLIMITR-write.patch
+	patches.kernel.org/6.17.3-299-coresight-Fix-missing-include-for-FIELD_GET.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
