--- a/series.conf
+++ b/series.conf
@@ -355,6 +355,7 @@
 	patches.kernel.org/6.17.3-283-net-dst-introduce-dst-dev_rcu.patch
 	patches.kernel.org/6.17.3-284-ipv6-mcast-Add-ip6_mc_find_idev-helper.patch
 	patches.kernel.org/6.17.3-285-ipv6-start-using-dst_dev_rcu.patch
+	patches.kernel.org/6.17.3-286-ipv6-use-RCU-in-ip6_xmit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
