--- a/series.conf
+++ b/series.conf
@@ -197,6 +197,7 @@
 	patches.kernel.org/6.17.3-125-blk-mq-remove-useless-checkings-in-blk_mq_upda.patch
 	patches.kernel.org/6.17.3-126-blk-mq-check-invalid-nr_requests-in-queue_requ.patch
 	patches.kernel.org/6.17.3-127-blk-mq-convert-to-serialize-updating-nr_reques.patch
+	patches.kernel.org/6.17.3-128-blk-mq-cleanup-shared-tags-case-in-blk_mq_upda.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
