--- a/series.conf
+++ b/series.conf
@@ -516,6 +516,7 @@
 	patches.kernel.org/6.17.3-444-ASoC-qcom-sc8280xp-use-sa8775p-subdir-for-QCS9.patch
 	patches.kernel.org/6.17.3-445-iommu-vt-d-Disallow-dirty-tracking-if-incohere.patch
 	patches.kernel.org/6.17.3-446-iommu-selftest-prevent-use-of-uninitialized-va.patch
+	patches.kernel.org/6.17.3-447-RDMA-siw-Always-report-immediate-post-SQ-error.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
