--- a/series.conf
+++ b/series.conf
@@ -125,6 +125,7 @@
 	patches.kernel.org/6.17.3-053-leds-flash-leds-qcom-flash-Update-torch-curren.patch
 	patches.kernel.org/6.17.3-054-s390-bpf-Do-not-write-tail-call-counter-into-h.patch
 	patches.kernel.org/6.17.3-055-s390-bpf-Write-back-tail-call-counter-for-BPF_.patch
+	patches.kernel.org/6.17.3-056-s390-bpf-Write-back-tail-call-counter-for-BPF_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
