--- a/series.conf
+++ b/series.conf
@@ -480,6 +480,7 @@
 	patches.kernel.org/6.17.3-408-wifi-ath12k-Fix-peer-lookup-in-ath12k_dp_mon_r.patch
 	patches.kernel.org/6.17.3-409-rpmsg-qcom_smd-Fix-fallback-to-qcom-ipc-parse.patch
 	patches.kernel.org/6.17.3-410-remoteproc-qcom_q6v5_mss-support-loading-MBN-f.patch
+	patches.kernel.org/6.17.3-411-RDMA-rxe-Fix-race-in-do_task-when-draining.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
