--- a/series.conf
+++ b/series.conf
@@ -233,6 +233,7 @@
 	patches.kernel.org/6.17.3-161-riscv-bpf-Sign-extend-struct-ops-return-values.patch
 	patches.kernel.org/6.17.3-162-nvme-auth-update-bi_directional-flag.patch
 	patches.kernel.org/6.17.3-163-nvmet-fc-move-lsop-put-work-to-nvmet_fc_ls_req.patch
+	patches.kernel.org/6.17.3-164-nvmet-fcloop-call-done-callback-even-when-remo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
