--- a/series.conf
+++ b/series.conf
@@ -632,6 +632,7 @@
 	patches.kernel.org/6.17.3-560-usb-cdns3-cdnsp-pci-remove-redundant-pci_disab.patch
 	patches.kernel.org/6.17.3-561-scsi-ufs-core-Fix-PM-QoS-mutex-initialization.patch
 	patches.kernel.org/6.17.3-562-drm-amdgpu-vcn-Fix-double-free-of-vcn-dump-buf.patch
+	patches.kernel.org/6.17.3-563-Linux-6.17.3.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
