--- a/series.conf
+++ b/series.conf
@@ -299,6 +299,7 @@
 	patches.kernel.org/6.17.3-227-drm-bridge-it6505-select-REGMAP_I2C.patch
 	patches.kernel.org/6.17.3-228-wifi-rtw88-Lock-rtwdev-mutex-before-setting-th.patch
 	patches.kernel.org/6.17.3-229-HID-steelseries-refactor-probe-and-remove.patch
+	patches.kernel.org/6.17.3-230-media-zoran-Remove-zoran_fh-structure.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
