--- a/series.conf
+++ b/series.conf
@@ -481,6 +481,7 @@
 	patches.kernel.org/6.17.3-409-rpmsg-qcom_smd-Fix-fallback-to-qcom-ipc-parse.patch
 	patches.kernel.org/6.17.3-410-remoteproc-qcom_q6v5_mss-support-loading-MBN-f.patch
 	patches.kernel.org/6.17.3-411-RDMA-rxe-Fix-race-in-do_task-when-draining.patch
+	patches.kernel.org/6.17.3-412-selftests-mm-fix-va_high_addr_switch.sh-failur.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
