--- a/series.conf
+++ b/series.conf
@@ -624,6 +624,7 @@
 	patches.kernel.org/6.17.3-552-thunderbolt-Fix-use-after-free-in-tb_dp_dprx_w.patch
 	patches.kernel.org/6.17.3-553-tee-fix-register_shm_helper.patch
 	patches.kernel.org/6.17.3-554-pinctrl-check-the-return-value-of-pinmux_ops-g.patch
+	patches.kernel.org/6.17.3-555-bus-fsl-mc-Check-return-value-of-platform_get_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
