--- a/series.conf
+++ b/series.conf
@@ -235,6 +235,7 @@
 	patches.kernel.org/6.17.3-163-nvmet-fc-move-lsop-put-work-to-nvmet_fc_ls_req.patch
 	patches.kernel.org/6.17.3-164-nvmet-fcloop-call-done-callback-even-when-remo.patch
 	patches.kernel.org/6.17.3-165-nvme-tcp-send-only-permitted-commands-for-secu.patch
+	patches.kernel.org/6.17.3-166-i3c-master-svc-Use-manual-response-for-IBI-eve.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
