--- a/series.conf
+++ b/series.conf
@@ -327,6 +327,7 @@
 	patches.kernel.org/6.17.3-255-drm-dp-drm_edp_backlight_set_level-do-not-alwa.patch
 	patches.kernel.org/6.17.3-256-crypto-octeontx2-Call-strscpy-with-correct-siz.patch
 	patches.kernel.org/6.17.3-257-drm-re-allow-no-op-changes-on-non-primary-plan.patch
+	patches.kernel.org/6.17.3-258-media-rj54n1cb0c-Fix-memleak-in-rj54n1_probe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
