--- a/series.conf
+++ b/series.conf
@@ -199,6 +199,7 @@
 	patches.kernel.org/6.17.3-127-blk-mq-convert-to-serialize-updating-nr_reques.patch
 	patches.kernel.org/6.17.3-128-blk-mq-cleanup-shared-tags-case-in-blk_mq_upda.patch
 	patches.kernel.org/6.17.3-129-blk-mq-split-bitmap-grow-and-resize-case-in-bl.patch
+	patches.kernel.org/6.17.3-130-blk-mq-sched-add-new-parameter-nr_requests-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
