--- a/series.conf
+++ b/series.conf
@@ -260,6 +260,7 @@
 	patches.kernel.org/6.17.3-188-power-supply-max77705_charger-rework-interrupt.patch
 	patches.kernel.org/6.17.3-189-tools-nolibc-make-time_t-robust-if-__kernel_ol.patch
 	patches.kernel.org/6.17.3-190-spi-fix-return-code-when-spi-device-has-too-ma.patch
+	patches.kernel.org/6.17.3-191-clocksource-drivers-timer-tegra186-Avoid-64-bi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
