--- a/series.conf
+++ b/series.conf
@@ -262,6 +262,7 @@
 	patches.kernel.org/6.17.3-190-spi-fix-return-code-when-spi-device-has-too-ma.patch
 	patches.kernel.org/6.17.3-191-clocksource-drivers-timer-tegra186-Avoid-64-bi.patch
 	patches.kernel.org/6.17.3-192-clocksource-drivers-tegra186-Avoid-64-bit-divi.patch
+	patches.kernel.org/6.17.3-193-bpf-Mark-kfuncs-as-__noclone.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
