--- a/series.conf
+++ b/series.conf
@@ -496,6 +496,7 @@
 	patches.kernel.org/6.17.3-424-coresight-tmc-Support-atclk.patch
 	patches.kernel.org/6.17.3-425-coresight-catu-Support-atclk.patch
 	patches.kernel.org/6.17.3-426-coresight-etm4x-Support-atclk.patch
+	patches.kernel.org/6.17.3-427-coresight-Appropriately-disable-programming-cl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
