--- a/series.conf
+++ b/series.conf
@@ -108,6 +108,7 @@
 	patches.kernel.org/6.17.3-036-sched-fair-Get-rid-of-sched_domains_curr_level.patch
 	patches.kernel.org/6.17.3-037-lsm-CONFIG_LSM-can-depend-on-CONFIG_SECURITY.patch
 	patches.kernel.org/6.17.3-038-cpuset-fix-failure-to-enable-isolated-partitio.patch
+	patches.kernel.org/6.17.3-039-btrfs-return-any-hit-error-from-extent_writepa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
