--- a/series.conf
+++ b/series.conf
@@ -356,6 +356,7 @@
 	patches.kernel.org/6.17.3-284-ipv6-mcast-Add-ip6_mc_find_idev-helper.patch
 	patches.kernel.org/6.17.3-285-ipv6-start-using-dst_dev_rcu.patch
 	patches.kernel.org/6.17.3-286-ipv6-use-RCU-in-ip6_xmit.patch
+	patches.kernel.org/6.17.3-287-ipv6-use-RCU-in-ip6_output.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
