--- a/series.conf
+++ b/series.conf
@@ -330,6 +330,7 @@
 	patches.kernel.org/6.17.3-258-media-rj54n1cb0c-Fix-memleak-in-rj54n1_probe.patch
 	patches.kernel.org/6.17.3-259-media-staging-ipu7-convert-to-use-pci_alloc_ir.patch
 	patches.kernel.org/6.17.3-260-media-staging-ipu7-Don-t-set-name-for-IPU7-PCI.patch
+	patches.kernel.org/6.17.3-261-media-staging-ipu7-cleanup-the-MMU-correctly-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
