--- a/series.conf
+++ b/series.conf
@@ -127,6 +127,7 @@
 	patches.kernel.org/6.17.3-055-s390-bpf-Write-back-tail-call-counter-for-BPF_.patch
 	patches.kernel.org/6.17.3-056-s390-bpf-Write-back-tail-call-counter-for-BPF_.patch
 	patches.kernel.org/6.17.3-057-cpufreq-scmi-Account-for-malformed-DT-in-scmi_.patch
+	patches.kernel.org/6.17.3-058-arm64-dts-renesas-sparrow-hawk-Invert-microSD-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
