--- a/series.conf
+++ b/series.conf
@@ -421,6 +421,7 @@
 	patches.kernel.org/6.17.3-349-PCI-endpoint-pci-epf-test-Fix-doorbell-test-su.patch
 	patches.kernel.org/6.17.3-350-drivers-base-node-handle-error-properly-in-reg.patch
 	patches.kernel.org/6.17.3-351-RDMA-cm-Rate-limit-destroy-CM-ID-timeout-error.patch
+	patches.kernel.org/6.17.3-352-wifi-mt76-mt7996-Fix-mt7996_mcu_sta_ba-wcid-co.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
