--- a/series.conf
+++ b/series.conf
@@ -506,6 +506,7 @@
 	patches.kernel.org/6.17.3-434-net-ethtool-tsconfig-set-command-must-provide-.patch
 	patches.kernel.org/6.17.3-435-ipvs-Defer-ip_vs_ftp-unregister-during-netns-c.patch
 	patches.kernel.org/6.17.3-436-netfilter-nfnetlink-reset-nlh-pointer-during-b.patch
+	patches.kernel.org/6.17.3-437-netfilter-nf_conntrack-do-not-skip-entries-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
