--- a/series.conf
+++ b/series.conf
@@ -318,6 +318,7 @@
 	patches.kernel.org/6.17.3-246-scsi-libsas-Add-dev_parent_is_expander-helper.patch
 	patches.kernel.org/6.17.3-247-scsi-pm80xx-Use-dev_parent_is_expander-helper.patch
 	patches.kernel.org/6.17.3-248-scsi-pm80xx-Add-helper-function-to-get-the-loc.patch
+	patches.kernel.org/6.17.3-249-scsi-pm80xx-Fix-pm8001_abort_task-for-chip_800.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
