--- a/series.conf
+++ b/series.conf
@@ -615,6 +615,7 @@
 	patches.kernel.org/6.17.3-543-misc-fastrpc-Fix-fastrpc_map_lookup-operation.patch
 	patches.kernel.org/6.17.3-544-misc-fastrpc-fix-possible-map-leak-in-fastrpc_.patch
 	patches.kernel.org/6.17.3-545-misc-fastrpc-Skip-reference-for-DMA-handles.patch
+	patches.kernel.org/6.17.3-546-Input-atmel_mxt_ts-allow-reset-GPIO-to-sleep.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
