--- a/series.conf
+++ b/series.conf
@@ -12544,6 +12544,7 @@
 	patches.suse/drm-amd-display-Enable-Dynamic-DTBCLK-Switch.patch
 	patches.suse/bpf-Fix-metadata_dst-leak-__bpf_redirect_neigh_v-4-6.patch
 	patches.suse/bpf-Avoid-RCU-context-warning-when-unpinning-htab-wi.patch
+	patches.suse/selftests-bpf-Add-test-for-unpinning-htab-with-inter.patch
 	patches.suse/rtc-x1205-Fix-Xicor-X1205-vendor-prefix.patch
 	patches.suse/rtc-optee-fix-memory-leak-on-driver-removal.patch
 	patches.suse/NFSD-Define-a-proc_layoutcommit-for-the-FlexFiles-layout-type.patch
