--- a/series.conf
+++ b/series.conf
@@ -28322,6 +28322,7 @@
 	patches.suse/selftests-bpf-Fix-error-compiling-bpf_iter_setsockop.patch
 	patches.suse/selftests-bpf-Fix-compiling-parse_tcp_hdr_opt.c-with.patch
 	patches.suse/selftests-bpf-Fix-compiling-kfree_skb.c-with-musl-li.patch
+	patches.suse/selftests-bpf-Fix-compiling-flow_dissector.c-with-mu.patch
 	patches.suse/samples-bpf-Fix-compilation-errors-with-cf-protectio.patch
 	patches.suse/bpf-correctly-handle-malformed-BPF_CORE_TYPE_ID_LOCA.patch
 	patches.suse/selftests-bpf-test-for-malformed-BPF_CORE_TYPE_ID_LO.patch
