--- a/series.conf
+++ b/series.conf
@@ -11005,6 +11005,7 @@
 	patches.kernel.org/6.12.54-021-rtc-x1205-Fix-Xicor-X1205-vendor-prefix.patch
 	patches.kernel.org/6.12.54-022-rtc-optee-fix-memory-leak-on-driver-removal.patch
 	patches.kernel.org/6.12.54-023-perf-arm_spe-Correct-setting-remote-access.patch
+	patches.kernel.org/6.12.54-024-perf-arm-spe-Rename-the-common-data-source-en.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
