--- a/series.conf
+++ b/series.conf
@@ -11019,6 +11019,7 @@
 	patches.kernel.org/6.12.54-035-clk-mediatek-clk-mux-Do-not-pass-flags-to-clk.patch
 	patches.kernel.org/6.12.54-036-clk-nxp-lpc18xx-cgu-convert-from-round_rate-t.patch
 	patches.kernel.org/6.12.54-037-clk-nxp-Fix-pll0-rate-check-condition-in-LPC1.patch
+	patches.kernel.org/6.12.54-038-clk-tegra-do-not-overallocate-memory-for-bpmp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
