--- a/series.conf
+++ b/series.conf
@@ -12678,6 +12678,7 @@
 	patches.suse/mailbox-zynqmp-ipi-Fix-out-of-bounds-access-in-mailb.patch
 	patches.suse/mailbox-zynqmp-ipi-Fix-SGI-cleanup-on-unbind.patch
 	patches.suse/mailbox-mtk-cmdq-Remove-pm_runtime-APIs-from-cmdq_mb.patch
+	patches.suse/tcp-Don-t-call-reqsk_fastopen_remove-in-tcp_conn_request.patch
 	patches.suse/net-usb-asix-hold-PM-usage-ref-to-avoid-PM-MDIO-RTNL.patch
 	patches.suse/tpm_tis-Fix-incorrect-arguments-in-tpm_tis_probe_irq.patch
 	patches.suse/crypto-essiv-Check-ssize-for-decryption-and-in-place.patch
