--- a/series.conf
+++ b/series.conf
@@ -12563,6 +12563,7 @@
 	patches.suse/ACPI-NFIT-Fix-incorrect-ndr_desc-being-reportedin-de.patch
 	patches.suse/sunrpc-fix-null-pointer-dereference-on-zero-length-checksum.patch
 	patches.suse/NFSD-Fix-destination-buffer-size-in-nfsd4_ssc_setup_dul.patch
+	patches.suse/msft-hv-3338-hyperv-Add-missing-field-to-hv_output_map_device_int.patch
 	patches.suse/arm64-mte-Do-not-flag-the-zero-page-as-PG_mte_tagged.patch
 	patches.suse/clk-tegra-do-not-overallocate-memory-for-bpmp-clocks.patch
 	patches.suse/clk-renesas-cpg-mssr-Fix-memory-leak-in-cpg_mssr_res.patch
