--- a/series.conf
+++ b/series.conf
@@ -12570,6 +12570,7 @@
 	patches.suse/msft-hv-3351-mshv-Handle-NEED_RESCHED_LAZY-before-transferring-to.patch
 	patches.suse/msft-hv-3354-Drivers-hv-vmbus-Clean-up-sscanf-format-specifier-in.patch
 	patches.suse/msft-hv-3355-Drivers-hv-vmbus-Fix-sysfs-output-format-for-ring-bu.patch
+	patches.suse/msft-hv-3356-Drivers-hv-vmbus-Fix-typos-in-vmbus_drv.c.patch
 	patches.suse/arm64-mte-Do-not-flag-the-zero-page-as-PG_mte_tagged.patch
 	patches.suse/clk-tegra-do-not-overallocate-memory-for-bpmp-clocks.patch
 	patches.suse/clk-renesas-cpg-mssr-Fix-memory-leak-in-cpg_mssr_res.patch
