--- a/series.conf
+++ b/series.conf
@@ -12521,6 +12521,7 @@
 	patches.suse/USB-serial-option-add-SIMCom-8230C-compositions.patch
 	patches.suse/usb-vhci-hcd-Prevent-suspending-virtually-attached-d.patch
 	patches.suse/uio-uio_pdrv_genirq-Remove-MODULE_DEVICE_TABLE.patch
+	patches.suse/msft-hv-3336-uio_hv_generic-Let-userspace-take-care-of-interrupt-.patch
 	patches.suse/misc-genwqe-Fix-incorrect-cmd-field-being-reported-i.patch
 	patches.suse/iio-adc-pac1934-fix-channel-disable-configuration.patch
 	patches.suse/iio-xilinx-ams-Unmask-interrupts-after-updating-alar.patch
