--- a/series.conf
+++ b/series.conf
@@ -12407,6 +12407,7 @@
 	patches.suse/net-mana-Use-page-pool-fragments-for-RX-buffers-inst.patch
 	patches.suse/wifi-mwifiex-send-world-regulatory-domain-to-driver.patch
 	patches.suse/wifi-iwlwifi-Remove-redundant-header-files.patch
+	patches.suse/msft-hv-3344-net-mana-Reduce-waiting-time-if-HWC-not-responding.patch
 	patches.suse/dpll-zl3073x-Add-functions-to-access-hardware-regist.patch
 	patches.suse/dpll-zl3073x-Add-low-level-flash-functions.patch
 	patches.suse/dpll-zl3073x-Add-firmware-loading-functionality.patch
