--- a/series.conf
+++ b/series.conf
@@ -12642,6 +12642,7 @@
 	patches.suse/ixgbe-handle-IXGBE_VF_FEATURES_NEGOTIATE-mbox-cmd.patch
 	patches.suse/ixgbe-fix-too-early-devlink_free-in-ixgbe_remove.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
+	patches.suse/msft-hv-3361-scsi-storvsc-Prefer-returning-channel-with-the-same-.patch
 
 	# out-of-tree patches
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
