--- a/series.conf
+++ b/series.conf
@@ -12568,6 +12568,7 @@
 	patches.suse/msft-hv-3341-Drivers-hv-util-Cosmetic-changes-for-hv_utils_transp.patch
 	patches.suse/msft-hv-3350-x86-hyperv-Add-kexec-kdump-support-on-Azure-CVMs.patch
 	patches.suse/msft-hv-3351-mshv-Handle-NEED_RESCHED_LAZY-before-transferring-to.patch
+	patches.suse/msft-hv-3354-Drivers-hv-vmbus-Clean-up-sscanf-format-specifier-in.patch
 	patches.suse/arm64-mte-Do-not-flag-the-zero-page-as-PG_mte_tagged.patch
 	patches.suse/clk-tegra-do-not-overallocate-memory-for-bpmp-clocks.patch
 	patches.suse/clk-renesas-cpg-mssr-Fix-memory-leak-in-cpg_mssr_res.patch
