--- a/series.conf
+++ b/series.conf
@@ -12389,6 +12389,7 @@
 	patches.suse/firmware-firmware-meson-sm-fix-compile-test-default.patch
 	patches.suse/memory-samsung-exynos-srom-Fix-of_iomap-leak-in-exyn.patch
 	patches.suse/bus-fsl-mc-Check-return-value-of-platform_get_resour.patch
+	patches.suse/md-fix-mssing-blktrace-bio-split-events.patch
 	patches.suse/nvme-auth-update-bi_directional-flag.patch
 	patches.suse/nvmet-fc-move-lsop-put-work-to-nvmet_fc_ls_req_op.patch
 	patches.suse/nvmet-fc-avoid-scheduling-association-deletion-twice.patch
