--- a/series.conf
+++ b/series.conf
@@ -12764,6 +12764,7 @@
 	patches.suse/HID-hid-input-only-ignore-0-battery-events-for-digit.patch
 	patches.suse/HID-multitouch-fix-name-of-Stylus-input-devices.patch
 	patches.suse/msft-hv-3361-scsi-storvsc-Prefer-returning-channel-with-the-same-.patch
+	patches.suse/scsi-libfc-Prevent-integer-overflow-in-fc_fcp_recv_data.patch
 	patches.suse/net-usb-rtl8150-Fix-frame-padding.patch
 	patches.suse/can-bxcan-bxcan_start_xmit-use-can_dev_dropped_skb-i.patch
 	patches.suse/can-esd-acc_start_xmit-use-can_dev_dropped_skb-inste.patch
