--- a/series.conf
+++ b/series.conf
@@ -50667,6 +50667,7 @@
 	patches.suse/drm-amdgpu-always-sync-the-GFX-pipe-on-ctx-switch.patch
 	patches.suse/drm-amdgpu-fix-fw-attestation-for-MP0_14_0_-2-3.patch
 	patches.suse/drm-i915-fb-Relax-clear-color-alignment-to-64-bytes.patch
+	patches.suse/drm-xe-guc-Adding-steering-info-support-for-GuC-regi.patch
 	patches.suse/drm-xe-introduce-xe_gt_reset-and-xe_gt_wait_for_rese.patch
 	patches.suse/drm-xe-make-change-ccs_mode-a-synchronous-action.patch
 	patches.suse/drm-xe-oa-Add-missing-VISACTL-mux-registers.patch
