--- a/series.conf
+++ b/series.conf
@@ -49412,6 +49412,7 @@
 	patches.suse/drm-xe-guc-Copy-GuC-log-prior-to-dumping.patch
 	patches.suse/drm-xe-guc-Dead-CT-helper.patch
 	patches.suse/drm-xe-ptl-L3bank-mask-is-not-available-on-the-media.patch
+	patches.suse/drm-xe-guc-Prepare-GuC-register-list-and-update-ADS-.patch
 	patches.suse/drm-xe-xe3-Add-initial-set-of-workarounds.patch
 	patches.suse/drm-i915-color-Extract-intel_color_modeset.patch
 	patches.suse/drm-i915-Plumb-dsb-all-way-to-the-plane-hooks.patch
